录音时长限制、大家作品页面优化
录音时长限制、大家作品页面优化

--- a/school/everyoneWorks.html
+++ b/school/everyoneWorks.html
@@ -149,57 +149,66 @@
 			},
 	 
 			workList:[
-//			{
-//              "aswId": 3,
-//              "aswStudentId": 24,
-//              "aswDesc": "喜欢打电话的",
-//              "aswStudentName": "  200",
-//              "aswActId": 3,
-//              "aswAsId": 5,
-//              "aswPointNum": 1,
-//              "aswCommentNum": 2,
-//              "showStudentPic": "http://112.124.110.182:11008/upload/studentPicture/20170812/B20170812184037_d0959b7a25b64a80ac9bbfa428b7110b.png",
-//              "activityStudentsWorksFilesList": [
-//                  {
-//                      "aswfId": 3,
-//                      "aswfTime": "2017-08-25 22:58:22",
-//                      "aswfStudentId": 24,
-//                      "aswfFiles": "http://112.124.110.182:11008/upload/TaskExecPicture/20170825//1503672443675.jpg20170825224730_d0841e80f28a482e86afd3c176ae064f.jpg",
-//                      "aswfStudentName": "  200",
-//                      "aswfActId": 3,
-//                      "aswfAswId": 3
-//                  },
-//                  {
-//                      "aswfId": 4,
-//                      "aswfTime": "2017-08-25 22:58:25",
-//                      "aswfStudentId": 24,
-//                      "aswfFiles": "http://112.124.110.182:11008/upload/TaskExecPicture/20170825//1500030347631.jpg20170825224736_2ce220c937c64d6c9f7f137062f2cb5f.jpg",
-//                      "aswfStudentName": "  200",
-//                      "aswfActId": 3,
-//                      "aswfAswId": 3
-//                  },
-//                  {
-//                      "aswfId": 5,
-//                      "aswfTime": "2017-08-25 22:58:28",
-//                      "aswfStudentId": 24,
-//                      "aswfFiles": "http://112.124.110.182:11008/upload/TaskExecPicture/20170825//1503672467553.amr20170825224750_47808e84e7cc4ca885452e606d0a4966.amr",
-//                      "aswfStudentName": "  200",
-//                      "aswfActId": 3,
-//                      "aswfAswId": 3
-//                  },
-//                  {
-//                      "aswfId": 6,
-//                      "aswfTime": "2017-08-25 23:03:54",
-//                      "aswfStudentId": 24,
-//                      "aswfFiles": "http://112.124.110.182:11008/upload/TaskExecPicture/20170825//1503672443675.jpg20170825224730_d0841e80f28a482e86afd3c176ae064f.jpg",
-//                      "aswfStudentName": "  200",
-//                      "aswfActId": 3,
-//                      "aswfAsId": 5,
-//                      "aswfAswId": 3
-//                  } 
-//              ],
-//              "activityCommentList": []
-//          }
+			{
+                "aswId": 3,
+                "aswStudentId": 24,
+                "aswDesc": "喜欢打电话的",
+                "aswStudentName": "  200",
+                "aswActId": 3,
+                "aswAsId": 5,
+                "aswPointNum": 1,
+                "aswCommentNum": 2,
+                "showStudentPic": "http://112.124.110.182:11008/upload/studentPicture/20170812/B20170812184037_d0959b7a25b64a80ac9bbfa428b7110b.png",
+                "activityStudentsWorksFilesList": [
+                    {
+                        "aswfId": 3,
+                        "aswfTime": "2017-08-25 22:58:22",
+                        "aswfStudentId": 24,
+                        "aswfFiles": "http://112.124.110.182:11008/upload/TaskExecPicture/20170825//1503672443675.jpg20170825224730_d0841e80f28a482e86afd3c176ae064f.jpg",
+                        "aswfStudentName": "  200",
+                        "aswfActId": 3,
+                        "aswfAswId": 3
+                    },
+                    {
+                        "aswfId": 4,
+                        "aswfTime": "2017-08-25 22:58:25",
+                        "aswfStudentId": 24,
+                        "aswfFiles": "http://112.124.110.182:11008/upload/TaskExecPicture/20170825//1500030347631.jpg20170825224736_2ce220c937c64d6c9f7f137062f2cb5f.jpg",
+                        "aswfStudentName": "  200",
+                        "aswfActId": 3,
+                        "aswfAswId": 3
+                    },
+                    {
+                        "aswfId": 4,
+                        "aswfTime": "2017-08-25 22:58:25",
+                        "aswfStudentId": 24,
+                        "aswfFiles": "http://112.124.110.182:11008/upload/TaskExecPicture/20170825//1500030347631.jpg20170825224736_2ce220c937c64d6c9f7f137062f2cb5f.jpg",
+                        "aswfStudentName": "  200",
+                        "aswfActId": 3,
+                        "aswfAswId": 3
+                    },
+                    {
+                        "aswfId": 5,
+                        "aswfTime": "2017-08-25 22:58:28",
+                        "aswfStudentId": 24,
+                        "aswfFiles": "http://112.124.110.182:11008/upload/TaskExecPicture/20170825//1503672467553.amr20170825224750_47808e84e7cc4ca885452e606d0a4966.amr",
+                        "aswfStudentName": "  200",
+                        "aswfActId": 3,
+                        "aswfAswId": 3
+                    },
+                    {
+                        "aswfId": 6,
+                        "aswfTime": "2017-08-25 23:03:54",
+                        "aswfStudentId": 24,
+                        "aswfFiles": "http://112.124.110.182:11008/upload/TaskExecPicture/20170825//1503672443675.jpg20170825224730_d0841e80f28a482e86afd3c176ae064f.jpg",
+                        "aswfStudentName": "  200",
+                        "aswfActId": 3,
+                        "aswfAsId": 5,
+                        "aswfAswId": 3
+                    } 
+                ],
+                "activityCommentList": []
+            }
 			]
 		},
 		methods:{
@@ -220,17 +229,17 @@
 				return type;
 			},
 			getDisplayStyle:function(patch){
-				var type="width: 70%; margin: 2px;float:left;";
+				var type="";
 				//console.info(patch);
 				if(patch){
 					var suffix = patch.substr(patch.lastIndexOf('.'));
 					if(suffix=='.mov' || suffix=='.3gp' || suffix=='.mp4' || suffix=='.avi'){
-						type="width: 70%; margin: 2px;float:left;";
+						type="width:90%;margin-left: 3px;";
 					}else if( suffix=='.amr' ||  suffix=='.mp3' || suffix=='.m4a' ){
-						type="width: 70%; margin: 2px;float:left;";
+						type="width:90%;margin-left:6px;";
 					}
 				 	else  if( suffix=='.jpg' ||  suffix=='.png' || suffix=='.gif' ){
-						type="width: 30%; margin: 2px;float:left;";
+						type="width: 30%;margin-left:6px;display: inline-block;height:80px";
 					}
 				}
 				return type;
