--- a/school/activityReply.html
+++ b/school/activityReply.html
@@ -118,7 +118,7 @@
 			methods:{
 				getDisplayType:function(patch){
 						var type=0;
-						console.info(patch);
+						//console.info(patch);
 						if(patch){
 							var suffix = patch.substr(patch.lastIndexOf('.'));
 							if(suffix=='.mov' || suffix=='.3gp' || suffix=='.mp4' || suffix=='.avi'){
