--- a/school/exchangeArea.html
+++ b/school/exchangeArea.html
@@ -63,10 +63,9 @@
 						<ul class="mui-table-view">
 							<li  class="mui-table-view-cell" v-for="item in acAreaList">
 								 <div class="works-answer">
-									<img v-if="item.showStudentPic!=''" :src="item.showStudentPic" class="works-img"/>
-									<img v-else src="../images/bigicon1.png" class="works-img"/>
-									<p class="works-username">{{item.acaStudentName}} <label class="works-time">{{item.acaTime}}</label></p>
-									<p class="works-content">{{item.acaDesc}}</p> 
+									<img  :src="getImage(item)" class="works-img"/>
+									<p class="works-username">{{item.acaStudentName}}&nbsp;<label class="works-time">&nbsp;{{item.acaTime}}</label></p>
+									<p class="works-content">{{item.acaDesc}}&nbsp;</p> 
 									
 									<img v-if="2==getDisplayType(item.acaFiles)" :src="item.acaFiles"  @tap='displayFile(item.acaFiles)' class="works-desc-pic"/>
 									
@@ -201,6 +200,25 @@
 					}
 					//console.info(cssStyle);
 					return cssStyle;
+				}
+				,
+				getImage:function(item){
+					var imageFile="../images/school/head-pic.png";
+					if(item.acaOperType==2 &&　item.showTeacherPic!=undefined && item.showTeacherPic!=''){
+						imageFile=item.showTeacherPic;
+					}else if(item.acaOperType==1 &&　item.showStudentPic!=undefined && item.showStudentPic!=''){
+						imageFile=item.showStudentPic;
+					}
+					return imageFile;
+				},
+				getCImage:function(item){
+					var imageFile="../images/school/head-pic.png";
+					if(item.actIsTeacher==1 &&　item.showTeacherPic!=undefined && item.showTeacherPic!=''){
+						imageFile=item.showTeacherPic;
+					}else if(item.actIsTeacher==2 &&　item.showStudentPic!=undefined && item.showStudentPic!=''){
+						imageFile=item.showStudentPic;
+					}
+					return imageFile;
 				}
 			}
 		});
