--- a/school/activityDetails.html
+++ b/school/activityDetails.html
@@ -50,8 +50,9 @@
 
 		<div class="show-desc">
 			<div class="show-desc-right">
-				<div v-if="courseInfo.actEnd==1 && courseInfo.hasPart==1" id="activity_detail_quit" class="ac-end-quit">退出</div>
-				<div v-else-if="courseInfo.actEnd==1"  id="activity_detail_join" class="ac-end-join">加入</div>
+				<div v-if="courseInfo.actEnd==1 && courseInfo.hasPart==1 && userInfo.roleType==3" id="activity_detail_quit" class="ac-end-quit">退出</div>
+				<div v-else-if="courseInfo.actEnd==1 && userInfo.roleType==3"  id="activity_detail_join" class="ac-end-join">加入</div>
+				<div v-else-if="courseInfo.actEnd==1 && userInfo.roleType==2" class="ac-end-join">进行中</div>
 				<div v-else id="activity_detail_join_end" class="ac-end">结束</div>
 				<p style="font-size: 12px !important;">剩余名额{{courseInfo.surplustCount}}人</p>
 			</div>
@@ -86,7 +87,7 @@
 
 		</div>
 		<div style="padding:32px;background-color:#F7F7F7;">
-			<button  v-if="courseInfo.hasPart==1" @tap="open_activity_my_works()" id="btn_activity_my_works" type="button" 
+			<button  v-if="userInfo.roleType==3 && courseInfo.hasPart==1" @tap="open_activity_my_works()" id="btn_activity_my_works" type="button" 
 				class="mui-btn mui-btn-primary mui-btn-block besttone-full-btn">我的作品</button>
 			<button v-if="userInfo.roleType==2" id="btn_activity_my_works_show" type="button" 
 				class="mui-btn mui-btn-primary mui-btn-block besttone-full-btn">推荐学校秀</button>
@@ -110,10 +111,9 @@
 		el: '#actiity-detail-content',
 		data: {
 			userInfo:{roleType:2},
-			courseInfo:{actEnd:2,
-				hasPart:0
-		   } 
-				
+			courseInfo:{actEnd:1,
+				hasPart:1
+		    }
 		} 
 	});
 	
@@ -264,7 +264,21 @@
 	
 	
 	function post_activity_my_works_show(){
-		mui.toast("推荐学校秀！");
+		 
+		var userInfo = app.getState();
+		var data={};
+		console.info(JSON.stringify(vm_activity_detail.courseInfo));
+		data={
+			manageId:userInfo.manageId,
+			actId:vm_activity_detail.courseInfo.actId,
+			actFine:2
+			}
+
+		app.postShowRecommend(data,function(data){
+			if(data.code==0){
+			}
+			mui.toast(data.msg);
+		}); 
 	}
 	
 	function post_activity_detail_join(type){
