变更首页展示方式

--- a/login.html
+++ b/login.html
@@ -81,7 +81,8 @@
 						mui.toast(msg.msg);
 						if(msg.code==0)
 						{
-							window.location.href='school/courseAll.html'
+							//window.location.href='school/courseAll.html'
+							window.location.href='school/welcomePage.html';
 						}
 					}
 					 
