优化界面显示

--- a/school/scShowAll.html
+++ b/school/scShowAll.html
@@ -327,11 +327,11 @@
   	
   	
   	
-    mui('#main_bar').on('tap', 'a', function(e) {
-	    //获取目标子页的id
-	    var targetTab = this.getAttribute('href');
-	    window.location.href=targetTab;
-	});
+//  mui('#main_bar').on('tap', 'a', function(e) {
+//	    //获取目标子页的id
+//	    var targetTab = this.getAttribute('href');
+//	    window.location.href=targetTab;
+//	});
 	
 	(function($) {
 		//阻尼系数
