--- a/school/personalCenter.html
+++ b/school/personalCenter.html
@@ -205,11 +205,11 @@
 			
 			
 			
-			mui('#main_bar').on('tap', 'a', function(e) {
-			    //获取目标子页的id
-			    var targetTab = this.getAttribute('href');
-			    window.location.href=targetTab;
-			});
+//			mui('#main_bar').on('tap', 'a', function(e) {
+//			    //获取目标子页的id
+//			    var targetTab = this.getAttribute('href');
+//			    window.location.href=targetTab;
+//			});
 			
 			
 //	var webview_student_time_line = null;
