--- a/school/activityList.html
+++ b/school/activityList.html
@@ -34,7 +34,7 @@
 			<div class="mui-slider-group">
 				<div id="item_activity_list" class="mui-slider-item mui-control-content mui-active">
 					<div id="scroll1" class="mui-scroll-wrapper">
-						<div class="mui-scroll">
+						<div class="mui-scroll" style="min-height: 550px;">
 							<ul id="activity_list_list" class="mui-table-view">
 								 
 							</ul>
