--- a/school/activityReply.html
+++ b/school/activityReply.html
@@ -93,7 +93,19 @@
 	<script type="text/javascript" src="../js/common.js" ></script>
 	<script type="text/javascript" src="../js/immersed.js" ></script>
 	<script type="text/javascript" charset="UTF-8">
-		mui.init();
+		mui.init({
+			beforeback:function(){
+				var webview_activity_detail = plus.webview.getWebviewById('activity_detail');
+				//触发列表界面的自定义事件（refresh）,从而进行数据刷新
+				//mui.fire(list,'refresh');
+				mui.fire(webview_activity_detail, 'get_activity_detail', {
+					activityId: vm_activity_reply.activityInfo.actId
+				});
+				console.info('beforeback get_activity_detail');
+				//返回true，继续页面关闭逻辑
+				return true;
+	    	}
+		});
 		var count = 0;
 
 
@@ -292,8 +304,10 @@
 		}
 
 		//重写返回逻辑
+		var old_back = mui.back;
 		mui.back = function() {
 			plus.webview.currentWebview().hide("auto", 300);
+			old_back();
 		}
 		
 		// 回调
