--- a/school/courseAll.html
+++ b/school/courseAll.html
@@ -35,7 +35,7 @@
 				<div class="mui-slider-group">
 					<div id="item1mobile" class="mui-slider-item mui-control-content mui-active">
 						<div id="scroll1" class="mui-scroll-wrapper">
-							<div class="mui-scroll">
+							<div class="mui-scroll" style="min-height: 550px;">
 								<ul id="course_all_my"  class="mui-table-view">									
 									 <!--<li class="mui-table-view-cell">
 										<div class="myh5_card" > 
@@ -48,7 +48,18 @@
 												 
 											</a>
 										</div>
-									 </li>--> 
+									 </li>--> <li class="mui-table-view-cell">
+										<div class="myh5_card" > 
+											<a  href="#"  class="top sc_purple">
+												<img src="../images/school/cc_pic.png" class="photo" />
+												<div  class="mui-icon mui-icon-navigate" style="color: #FFFFFF;float: right; margin-right: 10px; font-size: 32px; text-shadow: 0px 2px 3px #000000;"></div>
+												<p class="title">Walking 上海</p>
+												<p href="#"  class="content1">“国际理解教育”</p>
+												<p class="content2">校本课程教材 试用本</p>
+												 
+											</a>
+										</div>
+									 </li>
 								</ul>
 							</div>
 						</div>
@@ -71,7 +82,7 @@
 				<div class="mui-slider-group mui-fullscreen" style="top:64px;bottom: 0px; padding-top: 10px;">
 					<div id="item11" class="mui-slider-item mui-control-content mui-active" style="margin-top:0px;">
 						<div id="scroll1" class="mui-scroll-wrapper">
-							<div class="mui-scroll">
+							<div class="mui-scroll" style="min-height: 550px;">
 								<ul id="course_all_all"  class="mui-table-view">									
 									 <!--<li class="mui-table-view-cell">
 										<div class="myh5_card">
