--- a/school/everyoneWorks.html
+++ b/school/everyoneWorks.html
@@ -56,7 +56,7 @@
 		<div class="mui-slider-group">
 			<div id="item1mobile" class="mui-slider-item mui-control-content mui-active">
 				<div id="scroll1" class="mui-scroll-wrapper">
-					<div class="mui-scroll">
+					<div class="mui-scroll" style="min-height: 550px;">
 						<ul class="mui-table-view">									
 							<li v-for="item in workList" class="mui-table-view-cell" style="padding: 11px 0px;">
 								<div class="works-desc">
