--- a/school/activityDetails.html
+++ b/school/activityDetails.html
@@ -224,7 +224,8 @@
 	function open_activity_reply_detail() {			
 		//触发子窗口变更详情
 		mui.fire(webview_activity_reply_detail, 'get_activity_reply_detail', {
-				activityInfo: vm_activity_detail.courseInfo
+					activityId: activityId,
+					activityInfo: vm_activity_detail.courseInfo
 			});
  
 			setTimeout(function () {
