--- a/school/exchangeArea.html
+++ b/school/exchangeArea.html
@@ -59,7 +59,7 @@
 		<div class="mui-slider-group">
 			<div id="item1mobile" class="mui-slider-item mui-control-content mui-active">
 				<div id="scroll1" class="mui-scroll-wrapper">
-					<div class="mui-scroll">
+					<div class="mui-scroll" style="min-height: 550px;">
 						<ul class="mui-table-view">
 							<li  class="mui-table-view-cell" v-for="item in acAreaList">
 								 <div class="works-answer">
@@ -385,7 +385,7 @@
 					}
 					exchangeAreaPost();
 				}
-				pushExchangeAreaDown("",true);
+				//pushExchangeAreaDown("",true);
 					//vm_exchange_area.selectFileList.splice(0,vm_exchange_area.selectFileList.length);
     		}
     	}
