--- a/school/scShowAll.html
+++ b/school/scShowAll.html
@@ -63,7 +63,7 @@
 			<div class="mui-slider-group">
 				<div id="item1mobile" class="mui-slider-item mui-control-content mui-active">
 					<div id="scroll1" class="mui-scroll-wrapper">
-						<div class="mui-scroll">
+						<div class="mui-scroll" style="min-height: 550px;">
 							<ul id="sc_show_school_list" class="mui-table-view">	
 								
 								<li v-for="item in schoolShowList" class="mui-table-view-cell">
@@ -122,7 +122,7 @@
 			<div class="mui-slider-group">
 				<div id="item1mobile" class="mui-slider-item mui-control-content mui-active">
 					<div id="scroll1" class="mui-scroll-wrapper">
-						<div class="mui-scroll">
+						<div class="mui-scroll" style="min-height: 550px;">
 							<ul id="sc_show_class_list"  class="mui-table-view">
 								
 								<!---->
