--- a/school/courseDir.html
+++ b/school/courseDir.html
@@ -133,8 +133,9 @@
 //				    ]
 //		        }] 
 			 	pageIndex=1;
+			}else{
+				mui.toast(data.msg);
 			}
-			mui.toast(data.msg);
 		});
 			 
 	});
