--- a/school/setPage.html
+++ b/school/setPage.html
@@ -16,7 +16,10 @@
 	<link href="../css/top.css" rel="stylesheet"/>
 	<link href="../css/school/setMsgInfo.css" rel="stylesheet"/>
 	<style type="text/css">
-		 
+		 .my_arrowr {
+		 	margin-top: 8px; margin-right: 20px; float: right;
+		 	color: #999;
+		 }
 	</style>
 </head>
 <body>
@@ -31,9 +34,11 @@
 		<form class="mui-input-group">  
 			<div id="modify_password"  class="mui-input-row">
 				<label>修改密码  </label> 
+				<div class="mui-icon mui-icon-arrowright my_arrowr"  ></div>
 			</div>
 			<div id="personal_set_link"  class="mui-input-row">
 				<label>修改个人信息</label> 
+				<div class="mui-icon mui-icon-arrowright my_arrowr"></div>
 			</div>
   
 			 
