--- a/school/personalCenter.html
+++ b/school/personalCenter.html
@@ -18,7 +18,7 @@
 		
 	<header class="mui-bar mui-bar-nav" style="height: 260px;
     background: url(../images/school/psct_top.png);background-size: cover">
-		<a href="#" id="personal_center_set_page" class="mui-icon mui-icon-gear mui-pull-right" style="text-shadow: 0px 2px 2px #333333"></a>
+		<a href="#" id="personal_center_set_page" class="mui-icon mui-icon-gear mui-pull-right" style="text-shadow: 0px 2px 2px #333333;font-size: 28px;"></a>
 		<img src="../images/school/head-btm.png" class="head-pic-btm">
 		<img src="../images/school/ct-dianzhui.png" class="dz-icon">
 		
