优化walking上海、登录页面
优化walking上海、登录页面

--- a/walking/msgInfo.html
+++ b/walking/msgInfo.html
@@ -11,11 +11,14 @@
 	<link href="../css/walking/top.css" rel="stylesheet"/>
 	<link href="../css/walking/swiper.min.css" rel="stylesheet"/>
     <style type="text/css">
+    		.opacity {
+		    opacity: .85;
+		}
     </style>
 </head>
 <body class="pagebg  bg_gradient">
 	<div >
-		<header class="mui-bar mui-bar-nav">
+		<header class="mui-bar mui-bar-nav opacity">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<div  class="mui-segmented-control title-control">
 				<a class="mui-control-item mui-active call-btn" href="#item1" id="it1">
