--- a/walking/wkMap.html
+++ b/walking/wkMap.html
@@ -12,15 +12,13 @@
 <body>
 	<div class="main">
 		<a id="btn_wk_map_back" href="#">
-			<span class="mui-icon mui-icon-home"></span>
+			<img src="../images/walking/home.png" class="home-icon">
 		</a>
 		<div class="logo">
 			<img src="../images/walking/logo.png"/>
 		</div>
 		<div class="content">
 			<img src="../images/walking/map.png"/>
-			
-			
 		</div>
 	</div>
 	<div class="right_show">
@@ -31,8 +29,6 @@
 <script src="../js/walking/useAll.js" type="text/javascript" charset="utf-8"></script>
 <script src="../js/walking/wkMap.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" charset="utf-8">
-  	mui.init();
-  	
   	 mui.plusReady(function(){
   	 	$("#btn_wk_map_back").on('tap',function(){
     		 mui.back();   		
