更换登录输入框图标、整合样式
更换登录输入框图标、整合样式

--- a/login.html
+++ b/login.html
@@ -9,26 +9,6 @@
 		<link href="css/mui.min.css" rel="stylesheet" />
 		<link href="css/icons-extra.css" rel="stylesheet" />
 		<link href="css/login.css" rel="stylesheet" />
-		<style type="text/css">
-			#logo {
-				max-width: 200px;
-			}
-			
-			.p_text {
-				color: #fff;
-				text-align: center;
-				font-size: 24px;
-			}
-			
-			.mui-input-group:before {
-				background-color: initial;
-			}
-			
-			.mui-icon-extra {
-				position: absolute;
-				color: #fff;
-			}
-		</style>
 	</head>
 
 	<body class="login-background">
@@ -40,11 +20,11 @@
 			<p class="p_text">校本课程平台</p>
 			<div class="mui-input-group">
 				<div class="mui-input-row" id="account-wrapper">
-					<span class="mui-icon-extra mui-icon-extra-people"></span>
+					<span class="mui-icon login-user"></span>
 					<input type="text" id="loginName" placeholder="请输入用户帐号" value="" />
 				</div>
 				<div class="mui-input-row">
-					<span class="mui-icon mui-icon-locked"></span>
+					<span class="mui-icon login-pwd"></span>
 					<input type="password" id="password" class="mui-input-password password" placeholder="请输入用户密码" value="" />
 				</div>
 				<div class="button-group">
